--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,37 @@
- # Node dependencies
+# Node modules
 node_modules/
 
-# Build artifacts
+# Build files
 dist/
+build/
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build artifacts
 dist-electron/
 dist_dev/
 win-unpacked/
@@ -22,20 +51,9 @@ win-unpacked/
 firebase-debug.log
 .firebaserc
 
-# Local env and secrets
-.env
-.env.*
-
-# OS/System files
-.DS_Store
-Thumbs.db
-
 # IDE/editor folders
-.vscode/
-.idea/
 *.swp
 
 # Misc
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
