--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "vite build",
+    "preview": "vite preview",
     "deploy:firebase": "firebase deploy"
   },
   "dependencies": {
