feat(v10.0-rc1): deep-links, playlist purge, landing page, plugin API unification

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,12 @@ firebase-debug.log
 # Misc
 yarn-debug.log*
 yarn-error.log*
+
+# old junk
+public/legacy/
+public/syncMusicPlayer.js   # duplicate, slated for removal
+
+# build artefacts
+dist/
+node_modules/
+.next/
